--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,13 @@
-html,
+/* Using Tailwindcss */
+
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: rgb(248, 249, 250);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+textarea {
+  resize: none;
 }
